<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/gradient_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/icon"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txtAppName"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/covid19india"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        app:fontFamily="@font/product_regular"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/rajin_gangadharan"
        android:gravity="center"
        app:fontFamily="@font/product_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thanks_to_covid19india_org"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:fontFamily="@font/product_regular"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cData"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        app:fontFamily="@font/product_regular"
        android:text="@string/crowdsourced_data_from_covid19india_org"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>