<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ProgressBar
        android:id="@+id/loadProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtProgress"
        app:layout_constraintLeft_toRightOf="@id/guideline0"
        app:layout_constraintRight_toLeftOf="@id/guideline2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:fontFamily="@font/product_regular"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loadProgress" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cadConfirmed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toRightOf="@id/guideline0"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consConfirmed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDeltaCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="end"
                app:fontFamily="@font/product_regular"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/guideline9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:text="@string/confirmed"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cadActive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorRed"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consActive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/guideline10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:text="@string/active"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline10" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.razerdp.widget.animatedpieview.AnimatedPieView
        android:id="@+id/pieView"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintLeft_toRightOf="@id/guideline0"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/txtUpdate"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontFamily="@font/product_regular"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toRightOf="@id/guideline0"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/pieView"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cadRecovered"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorGreen"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toRightOf="@id/guideline0"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consRecovered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDeltaRec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="end"
                app:fontFamily="@font/product_regular"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtRecovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/guideline11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:text="@string/recovered"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline11" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cadDead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorYellow"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consDead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDeltaDead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="end"
                app:fontFamily="@font/product_regular"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="@font/product_regular"
                android:gravity="center"
                android:text="@string/deceased"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline12" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:elevation="5dp"
        app:fontFamily="@font/product_regular"
        android:text="@string/state_wise"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline0"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:backgroundTint="@color/colorAccent"
        app:fontFamily="@font/product_regular"
        app:elevation="5dp"
        app:cornerRadius="10dp"
        android:text="@string/day_wise"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline1"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>